AS5/compiling_error.txt
/Users/BICKLEY/code/cs/comsc110/AS5/5f-prime-number.cpp:14:8: error: expected ';' at end of declaration
  int i{1};
       ^
       ;
/Users/BICKLEY/code/cs/comsc110/AS5/5f-prime-number.cpp:33:8: error: expected ';' at end of declaration
  int i{1};
       ^
       ;
2 errors generated.
